deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myproject
  template:
    metadata:
      labels:
        app: myproject
    spec:
      containers:
      - name: myproject
        image: myregistry/myproject:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: myproject
spec:
  selector:
    app: myproject
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
