ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myproject
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myproject.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myproject
            port:
              name: http
